--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
   <header>
     <nav id="main-nav">
-      <h1><a class="nav-link" href="/#">Home</a></h1>
+      <h1><a class="nav-link" href="#/">Home</a></h1>
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle">&#9776;</label>
-      <a class="nav-link" href="/#converter">Converter</a>
-      <a class="nav-link" href="/#db">CHT Files</a>
+      <a class="nav-link" href="#/converter">Converter</a>
+      <a class="nav-link" href="#/cheats">CHT Files</a>
     </nav>
   </header>
 
-  <main id="home-template" class="page-view">
+  <main id="#/" exact="true" class="page-view">
     <h1>AR to CHT</h1>
     <h2>Converter and DB of CHT files for EZ Flash</h2>
   </main>
 
-  <main id="converter-template" class="page-view">
+  <main id="#/converter" class="page-view">
     <h1>Converter</h1>
     <form id="new-game-form">
       <fieldset>
@@ -34,9 +34,16 @@
       </fieldset>
     </form>
   </main>
+
+  <main id="#/cheats/:category" class="page-view">
+    <h1>Cheat View</h1>
+  </main>
   
-  <main id="db-template" class="page-view">
-    <h1>CHT File DB</h1>
+  <main id="#/cheats" class="page-view">
+    <h1>Cheats</h1>
+    <a href="/#/cheats/0-9">0-9</a>
+    <a href="/#/cheats/a">A</a>
+    <a href="/#/cheats/b">B</a>
   </main>
 
   <main id="404-template" class="page-view">
@@ -52,6 +59,12 @@
       <textarea class="cheat-code-input" id="cheat-code" placeholder="Enter cheat code"></textarea>
     </fieldset>
   </template>
+
+  <template id="game-list-template">
+
+  </template>
+
+  <template id="game-list-item-template"></template>
 
   <script src="app.js" type="module"></script>
 </body>
