more routing fixes and data fetching

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
   </header>
 
   <main id="#/" exact="true" class="page-view">
-    <h1>AR to CHT</h1>
-    <h2>Converter and DB of CHT files for EZ Flash</h2>
+    <article>
+      <h1>AR to CHT</h1>
+      <h2>Converter and DB of CHT files for EZ Flash</h2>
+    </article>
   </main>
 
   <main id="#/converter" class="page-view">
-    <h1>Converter</h1>
+    <article>
+      <h1>Converter</h1>
+    </article>
     <form id="new-game-form">
       <fieldset>
         <label for="game-title">Game Title</label>
@@ -35,19 +39,55 @@
     </form>
   </main>
 
+  <main id="#/game/:title" class="page-view">
+    <article>
+      <h3 class="game-title">Game View</h3>
+    </article>
+  </main>
+
   <main id="#/cheats/:category" class="page-view">
-    <h1>Cheat View</h1>
+    <article>
+      <h1>Cheat View</h1>
+    </article>
   </main>
   
   <main id="#/cheats" class="page-view">
-    <h1>Cheats</h1>
-    <a href="/#/cheats/0-9">0-9</a>
-    <a href="/#/cheats/a">A</a>
-    <a href="/#/cheats/b">B</a>
+    <article>
+      <h1>Cheats</h1>
+      <a href="/#/cheats/0-9">0-9</a>
+      <a href="/#/cheats/a">A</a>
+      <a href="/#/cheats/b">B</a>
+      <a href="/#/cheats/c">C</a>
+      <a href="/#/cheats/d">D</a>
+      <a href="/#/cheats/e">E</a>
+      <a href="/#/cheats/f">F</a>
+      <a href="/#/cheats/g">G</a>
+      <a href="/#/cheats/h">H</a>
+      <a href="/#/cheats/i">I</a>
+      <a href="/#/cheats/j">J</a>
+      <a href="/#/cheats/k">K</a>
+      <a href="/#/cheats/l">L</a>
+      <a href="/#/cheats/m">M</a>
+      <a href="/#/cheats/n">N</a>
+      <a href="/#/cheats/o">O</a>
+      <a href="/#/cheats/p">P</a>
+      <a href="/#/cheats/q">Q</a>
+      <a href="/#/cheats/r">R</a>
+      <a href="/#/cheats/s">S</a>
+      <a href="/#/cheats/t">T</a>
+      <a href="/#/cheats/u">U</a>
+      <a href="/#/cheats/v">V</a>
+      <a href="/#/cheats/w">W</a>
+      <a href="/#/cheats/x">X</a>
+      <a href="/#/cheats/y">Y</a>
+      <a href="/#/cheats/z">Z</a>
+    </article>
   </main>
 
   <main id="404-template" class="page-view">
-    <h1>404 Not Found</h1>
+    <article>
+      <h1>404 Not Found</h1>
+    </article>
   </main>
 
   <template id="new-cheat-template">
