incorporated deta functions for database

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </form>
   </main>
 
-  <main id="#/game/:title" class="page-view">
+  <main id="#/game/:key/:title" class="page-view">
     <article>
       <h3 class="game-title">Game View</h3>
     </article>
